# aws-dynamodb-macro

./: .gitignore  Cargo.toml
model-derive/: Cargo.toml
model-derive/src/: lib.rs
src/: error.rs
src/connection/: dynamodb.rs
