[package]
name = "aws-lambda-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.52"
aws-sdk-dynamodb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.0", features = ["aws-sdk-dynamodb+0_22"] }
serde_json = "1.0"
tokio = "1.24"

[lib]
name = "lib"
path = "src/lib.rs"
